# virgil

./: .gitignore  Makefile  README.md  exaple.rs  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  messages.dart  model_manager.dart  native.dart  native_lib_loader.dart  rust_bridge.dart  speech_recognition.dart
lib/src/rust/: frb_generated.dart
lib/src/rust/api/: simple.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml  Makefile  build.rs
native/hub/: Cargo.toml  build.rs
native/hub/.cargo/: config.toml
native/hub/src/actors/: mod.rs  whisper_actor.rs
native/hub/src/signals/: mod.rs
native/legacy/: messages.rs  state.rs  utils.rs
native/src/: api.rs  lib.rs  messages.rs  mvp.rs  port.rs  state.rs  utils.rs
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_virgil.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_virgil.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
(+3 files in other folders)
