[package]
name = "native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = { version = "2.0.1" }
cpal = "0.16.0"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
whisper-rs = { version = "0.14.3", features = ["tracing_backend"] }
