[package]
name = "native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1" }
cpal = "0.16.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std"] }
whisper-rs = { version = "0.14.3", features = ["tracing_backend"] }
