[package]
name = "native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1" }
cpal = "0.16.0"
dart-sys = "4.1.5"
futures = "0.3.31"
kalosm = { version = "0.4.0", features = ["sound"] }
kalosm-common = "0.4.0"
openssl = { version = "0.10.73", features = ["vendored"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std"] }

[profile.dev]
rpath = true

[profile.release]
rpath = true
